crates/aranya-policy-lang/tests/data/invalid_text/no_end_escaped_quote.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Syntax error
  |
1 | let x = "asdf\"
  |         ^ expected expression
